@@ -311,6 +311,7 @@ tagwint
 Taras Halturin (halturin)
 tcftbl
 th1rdey3
+The Cyberduck
 TheMystifyingCharacter
 theorlangur
 Thomas Nemeth
